# tagging

./: .coveragerc  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: easy-tag.yaml  windows-tag.yaml
docs/: conf.py  index.rst
src/tagging/: __init__.py  skeleton.py
tests/: conftest.py  test_skeleton.py
