
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "tagging"
dynamic = ["version"]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "Your package description"
requires-python = ">=3.8"
# ... other metadata

[tool.setuptools.dynamic]
version = {attr = "tagging.__version__"}

#[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
#version_scheme = "no-guess-dev"


[semantic_release]
version_variable = "tagging/__init__.py:__version__"
branch = "master"
upload_to_pypi = false
build_command = "python -m build"
