
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tagging"
dynamic = ["version"]
description = "A brief description of your package"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["tagging"]
package-dir = {"" = "src"}


[tool.setuptools.dynamic]
version = {attr = "tagging.__version__"}

#[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
#version_scheme = "no-guess-dev"


[semantic_release]
version_variable = "src/tagging/__init__.py:__version__"
branch = "master"
upload_to_pypi = false
build_command = "python -m build"
