
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tagging"
dynamic = ["version"]
description = "A brief description of your package"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]
packages = ["tagging"]
package-dir = {"" = "src"}


[tool.setuptools.dynamic]
version = {attr = "tagging.__version__"}



[semantic_release]
version_variable = ["src/tagging/__init__.py:__version__"]  # Note: this should be a list
version_toml = ["pyproject.toml:project.version"]  # Add this to update pyproject.toml too
version_pattern = ["(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"]
build_command = "python -m build"
branch = "master"
upload_to_pypi = false
